@@ -77,7 +77,10 @@ ASTERISK_FILE_VERSION(__FILE__, "$Revision$")
 					</option>
 					<option name="k">
 					        <para>Keep recording if channel hangs up.</para>
-					</option>	
+					</option>
+					<option name="y">
+					        <para>Terminate recording if *any* DTMF digit is received.</para>
+					</option>
 				</optionlist>
 			</parameter>
 		</syntax>
@@ -117,6 +120,7 @@ enum {
 	OPTION_IGNORE_TERMINATE = (1 << 5),
 	OPTION_KEEP = (1 << 6),
 	FLAG_HAS_PERCENT = (1 << 7),
+	OPTION_ANY_TERMINATE = (1 << 8),
 };
 
 AST_APP_OPTIONS(app_opts,{
@@ -126,6 +130,7 @@ AST_APP_OPTIONS(app_opts,{
 	AST_APP_OPTION('q', OPTION_QUIET),
 	AST_APP_OPTION('s', OPTION_SKIP),
 	AST_APP_OPTION('t', OPTION_STAR_TERMINATE),
+	AST_APP_OPTION('y', OPTION_ANY_TERMINATE),
 	AST_APP_OPTION('x', OPTION_IGNORE_TERMINATE),
 });
 
@@ -372,7 +377,8 @@ static int record_exec(struct ast_channel *chan, const char *data)
 				break;
 			}
 		} else if ((f->frametype == AST_FRAME_DTMF) &&
-		    (f->subclass.integer == terminator)) {
+			   ((f->subclass.integer == terminator) ||
+			    (ast_test_flag(&flags, OPTION_ANY_TERMINATE)))) {
 			ast_frfree(f);
 			pbx_builtin_setvar_helper(chan, "RECORD_STATUS", "DTMF");
 			break;
